# asteroid-miner

./: .gitignore  .lintstagedrc.json  AGENTS.md  Cargo.toml  codecov.yml  eslint.config.ts  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  turbo.json
.agents/skills/creating-components/: SKILL.md
.agents/skills/host-pattern/: SKILL.md
.github/workflows/: ci.yml  coverage.yml
crates/asteroid-miner-defs/: Cargo.toml
crates/asteroid-miner-defs/src/: asteroid_type.rs  asteroid_type_test.rs  background.rs  data_pack.rs  data_pack_test.rs  definitions.rs  formation.rs  lib.rs  machine.rs  name_pool.rs  registry.rs  resource.rs  scenario.rs  scenario_test.rs  ship_module.rs  skill.rs  skill_test.rs  trait_def.rs
crates/asteroid-miner-defs/src/tests/: dependency_test.rs  formation_test.rs  helpers.rs  integration_test.rs  loader_test.rs  machine_test.rs  manifest_test.rs  mod.rs  scenario_test.rs
crates/asteroid-miner-types/: Cargo.toml
crates/asteroid-miner-types/src/: asteroid.rs  lib.rs  pawn.rs  ship.rs  tag.rs
crates/asteroid-miner-wasm/: Cargo.toml
crates/asteroid-miner-wasm/src/: lib.rs
crates/asteroid-miner-world/: Cargo.toml
crates/asteroid-miner-world/src/: crew.rs  crew_test.rs  game_state.rs  lib.rs  pawn.rs  skill_state.rs
docs/: SUMMARY.md
docs/development/: host-pattern.md
