[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slotmap = { version = "1.0", features = ["serde"] }
regex = "1"
semver = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[profile.release]
opt-level = "s"
lto = true
