[package]
name = "asteroid-miner-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
asteroid-miner-types = { path = "../asteroid-miner-types" }
asteroid-miner-defs = { path = "../asteroid-miner-defs" }
asteroid-miner-world = { path = "../asteroid-miner-world" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
serde-wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
